--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 <body>
     <h1>hello there</h1>
     <div id="parent">
-        <div class="child"></div>
-        <div class="child"></div>
-        <div class="child"></div>
+        <div class="child">
+            <div class="window"></div>
+        </div>
+        <div class="child">
+            <div class="window"></div>
+        </div>
+        <div class="child">
+            <div class="window"></div>
+        </div>
        
     </div>
 </body>
