--- a/index.html
+++ b/index.html
@@ -10,13 +10,34 @@
     <h1>hello there</h1>
     <div id="parent">
         <div class="child">
-            <div class="window"></div>
+            <div class="window">
+                <p>1</p>
+            </div>
         </div>
         <div class="child">
-            <div class="window"></div>
+            <div class="window">
+                <p>2</p>
+            </div>
         </div>
         <div class="child">
-            <div class="window"></div>
+            <div class="window">
+                <p>3</p>
+            </div>
+        </div>
+        <div class="child">
+            <div class="window">
+                <p>4</p>
+            </div>
+        </div>
+        <div class="child">
+            <div class="window">
+                <p>5</p>
+            </div>
+        </div>
+        <div class="child">
+            <div class="window">
+                <p>6</p>
+            </div>
         </div>
        
     </div>
